# sara_navigation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: base_carrot_planner_params.yaml  base_eband_planner_params.yaml  base_global_planner_params.yaml  base_local_planner_params.yaml  base_navfn_planner_params.yaml  common_costmap_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  test.yaml
launch/: amcl_demo.launch  gmapping_demo.launch  move_base.launch  move_base_amcl.launch  move_base_carrot.launch  odom_navigation_demo.launch  rtab_move_base.launch  sim_move_base.launch  test_costmap_layers.launch  wm_amcl.launch  wm_slam_gmapping.launch
launch/include/: amcl.launch  move_base.launch
maps/: AreneRobocup2018.pgm  AreneRobocup2018.yaml  AreneRobocup2018_V2.pgm  AreneRobocup2018_V2.yaml  Bloc_B_Arene.pgm  Bloc_B_Arene.yaml  D_third_floor_ets.pgm  D_third_floor_ets.yaml  block_E.pgm  block_E.yaml  livia.pgm  livia.yaml  local_de_club.pgm  local_de_club.yaml  map_simulation.pgm  map_simulation.yaml  ridgeback_race.yaml  robocup2019_V4.pgm  robocup2019_V4.yaml  testarea_noxtion.pgm  testarea_noxtion.yaml  walkingxlivia.pgm  walkingxlivia.yaml
maps/robocup_2017/: arena.pgm  arena.yaml
params/: base_local_planner_params.yaml  costmap_common_params.yaml
